methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:12: error: ';' expected but 'false' found.
      retunr false}
             ^